# Dev-Sync

./: .env.example  .gitignore  README.md  TODO.md  pyrightconfig.json  render.yaml
backend/: .env.example  README.md  main.py  pyproject.toml  pyrightconfig.json  supabase_realtime_messages.sql
backend/app/: datetime_wire.py  routes.py  supabase_bucket_storage.py
backend/app/db/: base.py
backend/app/models/: __init__.py  account.py  account_team.py  application.py  comment.py  message.py  notifcation.py  project.py  team.py
backend/app/schemas/: account.py  application.py  comment.py  grade.py  message.py  notification.py  projects.py
backend/app/services/: application_chat.py  notifications.py
backend/devsync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
client/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/components/: application-chat-dialog.tsx  auth-guard.tsx  comment-section.tsx  edit-project-dialog.tsx  filter-sidebar.tsx  join-request-dialog.tsx  manage-team-dialog.tsx  messaging-hub.tsx  navbar.tsx  notification-popover.tsx  open-roles-badges.tsx  profile-projects-panel.tsx  project-card.tsx  user-profile-link.tsx
client/src/lib/: api-config.ts  auth-context.tsx  chat-realtime-context.tsx  chat-thread-utils.ts  datetime-display.ts  mock-data.ts  project-list-utils.ts  (+4 more)
db/schema/: schema.sql
db/seed_data/: AccountTeams.csv  Accounts.csv  Applications.csv  Comments.csv  Messages.csv  Notifications.csv  Projects.csv  Teams.csv
(+9 files in other folders)
